--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode development",
+    "build": "webpack --mode production",
     "dev": "webpack-dev-server --open --mode development"
   },
   "author": "",
@@ -31,6 +31,7 @@
   "dependencies": {
     "extract-text-webpack-plugin": "^3.0.2",
     "jsonp": "^0.2.1",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "uglifyjs-webpack-plugin": "^1.2.5"
   }
 }
