--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production",
+    "build": "webpack --config webpack.prod.js",
     "dev": "webpack-dev-server --open --mode development"
   },
   "author": "",
@@ -18,6 +18,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.4.0",
@@ -32,6 +33,8 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "jsonp": "^0.2.1",
     "react-router-dom": "^4.2.2",
-    "uglifyjs-webpack-plugin": "^1.2.5"
+    "typed.js": "^2.0.7",
+    "uglifyjs-webpack-plugin": "^1.2.5",
+    "webpack-parallel-uglify-plugin": "^1.1.0"
   }
 }
