--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "extract-text-webpack-plugin": "^3.0.2",
     "jsonp": "^0.2.1",
+    "mini-css-extract-plugin": "^0.4.0",
     "react-router-dom": "^4.2.2",
     "typed.js": "^2.0.7",
     "uglifyjs-webpack-plugin": "^1.2.5",
