--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.prod.js",
+    "build": "./node_modules/.bin/webpack --config webpack.prod.js",
     "dev": "webpack-dev-server --open --mode development"
   },
   "author": "",
