--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
+    "bundle-loader": "^0.5.6",
     "extract-text-webpack-plugin": "^3.0.2",
     "jsonp": "^0.2.1",
     "mini-css-extract-plugin": "^0.4.0",
+    "react-ace": "^6.1.1",
     "react-router-dom": "^4.2.2",
     "typed.js": "^2.0.7",
     "uglifyjs-webpack-plugin": "^1.2.5",
