--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "bundle-loader": "^0.5.6",
+    "events": "^3.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "jsonp": "^0.2.1",
     "mini-css-extract-plugin": "^0.4.0",
