--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "events": "^3.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "jsonp": "^0.2.1",
+    "lodash": "^4.17.10",
     "mini-css-extract-plugin": "^0.4.0",
     "react-ace": "^6.1.1",
     "react-router-dom": "^4.2.2",
