--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yang_project",
+  "name": "KAE",
   "version": "1.0.0",
   "description": "",
   "main": "webpack.config.js",
@@ -27,7 +27,7 @@
     "style-loader": "^0.21.0",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.4",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
     "bundle-loader": "^0.5.6",
@@ -36,8 +36,12 @@
     "jsonp": "^0.2.1",
     "lodash": "^4.17.10",
     "mini-css-extract-plugin": "^0.4.0",
+    "radium": "^0.25.0",
     "react-ace": "^6.1.1",
+    "react-redux": "^5.1.1",
     "react-router-dom": "^4.2.2",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
     "typed.js": "^2.0.7",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack-parallel-uglify-plugin": "^1.1.0"
