--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-ace": "^6.1.1",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.2.2",
+    "react-syntax-highlighter": "^8.0.1",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "typed.js": "^2.0.7",
