--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "KAE",
   "version": "1.0.0",
   "description": "",
+  "private": true,
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "./node_modules/.bin/webpack --config webpack.prod.js",
-    "dev": "webpack-dev-server --open --mode development"
+    "dev": "webpack-dev-server --open --mode development --config webpack.dev.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +20,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.4.0",
