--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,7 @@ build:
 
 deploy:
   stage: deploy
+  image: yuyang0/kae-cli:latest
   script:
     - kae app:deploy --cluster kjy --yaml-name default
   only:
