--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "redux-logger": "^3.0.6",
     "typed.js": "^2.0.7",
     "uglifyjs-webpack-plugin": "^1.2.5",
-    "webpack-parallel-uglify-plugin": "^1.1.0"
+    "webpack-parallel-uglify-plugin": "^1.1.0",
+    "xterm": "^3.8.0"
   }
 }
