--- a/package.json
+++ b/package.json
@@ -1,52 +1,35 @@
 {
-  "name": "KAE",
-  "version": "1.0.0",
-  "description": "",
+  "name": "kae-ui",
+  "version": "0.1.0",
   "private": true,
-  "main": "webpack.config.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "./node_modules/.bin/webpack --config webpack.prod.js",
-    "dev": "webpack-dev-server --open --mode development --config webpack.dev.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "antd": "^3.11.0",
-    "axios": "^0.18.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^0.28.11",
-    "html-webpack-plugin": "^3.2.0",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
-    "react-router": "^4.2.0",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.4",
-    "webpack-dev-server": "^3.1.10"
-  },
   "dependencies": {
-    "bundle-loader": "^0.5.6",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "jsonp": "^0.2.1",
-    "lodash": "^4.17.10",
-    "mini-css-extract-plugin": "^0.4.0",
+    "antd": "^3.11.2",
+    "axios": "^0.18.0",
     "radium": "^0.25.0",
-    "react-ace": "^6.1.1",
-    "react-redux": "^5.1.1",
-    "react-router-dom": "^4.2.2",
+    "react": "^16.6.3",
+    "react-ace": "^6.2.0",
+    "react-dom": "^16.6.3",
+    "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.1",
     "react-syntax-highlighter": "^8.0.1",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "typed.js": "^2.0.7",
-    "uglifyjs-webpack-plugin": "^1.2.5",
-    "webpack-parallel-uglify-plugin": "^1.1.0",
-    "xterm": "^3.8.0"
-  }
+    "xterm": "^3.9.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
