--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^3.11.2",
+    "antd": "^3.26.16",
     "axios": "^0.18.0",
+    "keycloak-js": "^9.0.3",
     "radium": "^0.25.0",
-    "react": "^16.6.3",
+    "react": "^16.13.1",
     "react-ace": "^6.2.0",
-    "react-dom": "^16.6.3",
-    "react-redux": "^6.0.0",
-    "react-router-dom": "^4.3.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.1",
     "react-syntax-highlighter": "^8.0.1",
-    "redux": "^4.0.1",
+    "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "xterm": "^3.9.1",
-    "keycloak-js": "^9.0.3"
+    "xterm": "^3.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
